mi primer commit en el branch

--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,12 @@ body{
     color: white;
     font-family: verdana;
 }
+a {
+	color: inherit;
+}
 
+div{
+	margin-top: 10px;
+	
+margin-left: 20px;
+}
